Correction to z-index to fix main site menu

--- a/app/assets/stylesheets/core.css.scss
+++ b/app/assets/stylesheets/core.css.scss
@@ -38,7 +38,7 @@ body, html {
   color: $white;
   height: 40px;
   position: fixed;
-  z-index: 1;
+  z-index: 5;
   width: 100%;
 }
 
